--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -58,7 +58,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
@@ -73,6 +73,7 @@ h1 {
 
 h2 {
   padding-bottom: 10px;
+  color:#FFFFFF;
   font-size: 32px;
   background: url('../images/bg_hr.png') repeat-x bottom;
 }
